{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 53,
  "lineage": "c79803c2-7140-6fa4-9956-92d5e8ff932e",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "res-19",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 10,
                "min_capacity": 0
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [
                  "archintran229a63044e.blob.core.windows.net"
                ],
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/backendAddressPools/storagebe",
                "ip_addresses": [],
                "name": "storagebe"
              },
              {
                "fqdns": [
                  "archintranet.azurewebsites.net"
                ],
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/backendAddressPools/appservicebe",
                "ip_addresses": [],
                "name": "appservicebe"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "ApplicationGatewayAffinity",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Enabled",
                "host_name": "",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/backendHttpSettingsCollection/appservicebesett",
                "name": "appservicebesett",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 443,
                "probe_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/probes/appservicehealthprobe",
                "probe_name": "appservicehealthprobe",
                "protocol": "Https",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              },
              {
                "affinity_cookie_name": "ApplicationGatewayAffinity",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Enabled",
                "host_name": "archintran229a63044e.blob.core.windows.net",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/backendHttpSettingsCollection/storagebackendse",
                "name": "storagebackendse",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 443,
                "probe_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/probes/storagebecustom",
                "probe_name": "storagebecustom",
                "protocol": "Https",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/ApplicationGatewayWebApplicationFirewallPolicies/archpocwafpolicy",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendIPConfigurations/appGwPublicFrontendIpIPv4",
                "name": "appGwPublicFrontendIpIPv4",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/publicIPAddresses/archwordpresspip2",
                "subnet_id": ""
              },
              {
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendIPConfigurations/appGwPrivateFrontendIpIPv4",
                "name": "appGwPrivateFrontendIpIPv4",
                "private_ip_address": "10.0.2.10",
                "private_ip_address_allocation": "Static",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "",
                "subnet_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/Archwordpressgwsubnet"
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendPorts/port_1048",
                "name": "port_1048",
                "port": 1048
              },
              {
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendPorts/port_1049",
                "name": "port_1049",
                "port": 1049
              },
              {
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendPorts/port_3443",
                "name": "port_3443",
                "port": 3443
              },
              {
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendPorts/port_443",
                "name": "port_443",
                "port": 443
              },
              {
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendPorts/port_80",
                "name": "port_80",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/gatewayIPConfigurations/appGatewayIpConfig",
                "name": "appGatewayIpConfig",
                "subnet_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/Archwordpressgwsubnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendIPConfigurations/appGwPublicFrontendIpIPv4",
                "frontend_ip_configuration_name": "appGwPublicFrontendIpIPv4",
                "frontend_port_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendPorts/port_443",
                "frontend_port_name": "port_443",
                "host_name": "",
                "host_names": [
                  "archintranet.joshikun.com"
                ],
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/httpListeners/appservicelistener",
                "name": "appservicelistener",
                "protocol": "Https",
                "require_sni": true,
                "ssl_certificate_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/sslCertificates/joshikunpfx",
                "ssl_certificate_name": "joshikunpfx",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendIPConfigurations/appGwPublicFrontendIpIPv4",
                "frontend_ip_configuration_name": "appGwPublicFrontendIpIPv4",
                "frontend_port_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/frontendPorts/port_443",
                "frontend_port_name": "port_443",
                "host_name": "archintranetblob.joshikun.com",
                "host_names": [],
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/httpListeners/storagelistener",
                "name": "storagelistener",
                "protocol": "Https",
                "require_sni": true,
                "ssl_certificate_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/sslCertificates/joshikunpfx",
                "ssl_certificate_name": "joshikunpfx",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw",
            "identity": [],
            "location": "eastus2",
            "name": "archwordpressgw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/probes/storagebecustom",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "400"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "storagebecustom",
                "path": "/",
                "pick_host_name_from_backend_http_settings": true,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              },
              {
                "host": "archintranet.joshikun.com",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/probes/appservicehealthprobe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "appservicehealthprobe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Https",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/backendAddressPools/appservicebe",
                "backend_address_pool_name": "appservicebe",
                "backend_http_settings_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/backendHttpSettingsCollection/appservicebesett",
                "backend_http_settings_name": "appservicebesett",
                "http_listener_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/httpListeners/appservicelistener",
                "http_listener_name": "appservicelistener",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/requestRoutingRules/appservicerule",
                "name": "appservicerule",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              },
              {
                "backend_address_pool_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/backendAddressPools/storagebe",
                "backend_address_pool_name": "storagebe",
                "backend_http_settings_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/backendHttpSettingsCollection/storagebackendse",
                "backend_http_settings_name": "storagebackendse",
                "http_listener_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/httpListeners/storagelistener",
                "http_listener_name": "storagelistener",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/requestRoutingRules/storageberule",
                "name": "storageberule",
                "priority": 2,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "Arch-wordpress-poc",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [
              {
                "data": "",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/applicationGateways/archwordpressgw/sslCertificates/joshikunpfx",
                "key_vault_secret_id": "",
                "name": "joshikunpfx",
                "password": "",
                "public_cert_data": "MIIObAYJKoZIhvcNAQcCoIIOXTCCDlkCAQExADALBgkqhkiG9w0BBwGggg5BMIIGGjCCBQKgAwIBAgIQBTa+e14VgjKof6GL0X5dJzANBgkqhkiG9w0BAQsFADBgMQswCQYDVQQGEwJVUzEVMBMGA1UEChMMRGlnaUNlcnQgSW5jMRkwFwYDVQQLExB3d3cuZGlnaWNlcnQuY29tMR8wHQYDVQQDExZHZW9UcnVzdCBUTFMgUlNBIENBIEcxMB4XDTIzMDYxODAwMDAwMFoXDTI0MDYxNzIzNTk1OVowGTEXMBUGA1UEAwwOKi5qb3NoaWt1bi5jb20wggEiMA0GCSqGSIb3DQEBAQUAA4IBDwAwggEKAoIBAQDIK5abTIgG8h/s+HJqdyTJ42YGZF8RDN/L4d7EkpMq6JHL0u7KPyn3hp0gs4otmkW0QVS8+PvTGwtmmRRqCs2y+lf [...]
              }
            ],
            "ssl_policy": [],
            "ssl_profile": [],
            "tags": {
              "Entity": "Arch",
              "Env": "POC"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-166",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2",
            "location": "eastus2",
            "name": "archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2",
            "resource_group_name": "arch-wordpress-poc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowTagCustom3443Inbound",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowTagCustom8080Inbound",
                "priority": 2700,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowTagCustom8080Outbound",
                "priority": 2712,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "Allow GatewayManager",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowGatewayManager",
                "priority": 2702,
                "protocol": "*",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "AppProfile": "Wordpress",
              "ENV": "POC",
              "Entity": "Arch"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-171",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2",
            "location": "eastus2",
            "name": "archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2",
            "resource_group_name": "arch-wordpress-poc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "Storage",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "AllowTagCustom8080Outbound",
                "priority": 2711,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "AppProfile": "Wordpress",
              "ENV": "POC",
              "Entity": "Arch"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-175",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-dbsubnet-nsg-eastus2",
            "location": "eastus2",
            "name": "archintran-f0f2d998eb-vnet-archintran-88801f72c2-dbsubnet-nsg-eastus2",
            "resource_group_name": "arch-wordpress-poc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "AppProfile": "Wordpress",
              "ENV": "POC",
              "Entity": "Arch"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "res-178",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintranetstoragepesubnet-nsg-eastus2",
            "location": "eastus2",
            "name": "archintran-f0f2d998eb-vnet-archintranetstoragepesubnet-nsg-eastus2",
            "resource_group_name": "arch-wordpress-poc",
            "security_rule": [
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowCorpnet",
                "priority": 2700,
                "protocol": "*",
                "source_address_prefix": "CorpNetPublic",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSAW",
                "priority": 2701,
                "protocol": "*",
                "source_address_prefix": "CorpNetSaw",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "AppProfile": "Wordpress",
              "ENV": "POC",
              "Entity": "Arch"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-167",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow GatewayManager",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "65200-65535",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2/securityRules/AllowGatewayManager",
            "name": "AllowGatewayManager",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2",
            "priority": 2702,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "GatewayManager",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-168",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2/securityRules/AllowTagCustom3443Inbound",
            "name": "AllowTagCustom3443Inbound",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-169",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2/securityRules/AllowTagCustom8080Inbound",
            "name": "AllowTagCustom8080Inbound",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2",
            "priority": 2700,
            "protocol": "Tcp",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "Internet",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-170",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "Storage",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2/securityRules/AllowTagCustom8080Outbound",
            "name": "AllowTagCustom8080Outbound",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2",
            "priority": 2712,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-172",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2",
            "priority": 2700,
            "protocol": "Tcp",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-173",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-174",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "Storage",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2/securityRules/AllowTagCustom8080Outbound",
            "name": "AllowTagCustom8080Outbound",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2",
            "priority": 2711,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-176",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-dbsubnet-nsg-eastus2/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-archintran-88801f72c2-dbsubnet-nsg-eastus2",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-177",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-dbsubnet-nsg-eastus2/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-archintran-88801f72c2-dbsubnet-nsg-eastus2",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-179",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow Corpnet inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintranetstoragepesubnet-nsg-eastus2/securityRules/AllowCorpnet",
            "name": "AllowCorpnet",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-archintranetstoragepesubnet-nsg-eastus2",
            "priority": 2700,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "CorpNetPublic",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "res-180",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "CSS Governance Security Rule.  Allow SAW inbound.  https://aka.ms/casg",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintranetstoragepesubnet-nsg-eastus2/securityRules/AllowSAW",
            "name": "AllowSAW",
            "network_security_group_name": "archintran-f0f2d998eb-vnet-archintranetstoragepesubnet-nsg-eastus2",
            "priority": 2701,
            "protocol": "*",
            "resource_group_name": "arch-wordpress-poc",
            "source_address_prefix": "CorpNetSaw",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-26",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/publicIPAddresses/archwordpresspip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "archwordpresspip",
            "resource_group_name": "Arch-wordpress-poc",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-27",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/publicIPAddresses/archwordpresspip1",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "archwordpresspip1",
            "resource_group_name": "Arch-wordpress-poc",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "res-28",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/Arch-wordpress-poc/providers/Microsoft.Network/publicIPAddresses/archwordpresspip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.177.162.86",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "archwordpresspip2",
            "resource_group_name": "Arch-wordpress-poc",
            "sku": "Standard",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-185",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/Archwordpressgwsubnet",
            "name": "Archwordpressgwsubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "arch-wordpress-poc",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "archintran-f0f2d998eb-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-187",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "delegation": [
              {
                "name": "dlg-appService",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/action"
                    ],
                    "name": "Microsoft.Web/serverFarms"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintran-88801f72c2-appsubnet",
            "name": "archintran-88801f72c2-appsubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "arch-wordpress-poc",
            "service_endpoints": [
              "Microsoft.Storage"
            ],
            "virtual_network_name": "archintran-f0f2d998eb-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-189",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "delegation": [
              {
                "name": "dlg-appService",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforMySQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintran-88801f72c2-dbsubnet",
            "name": "archintran-88801f72c2-dbsubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "arch-wordpress-poc",
            "virtual_network_name": "archintran-f0f2d998eb-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "res-191",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": true,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintranetstoragepesubnet",
            "name": "archintranetstoragepesubnet",
            "private_endpoint_network_policies_enabled": false,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "arch-wordpress-poc",
            "virtual_network_name": "archintran-f0f2d998eb-vnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-186",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/Archwordpressgwsubnet",
            "network_security_group_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2",
            "subnet_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/Archwordpressgwsubnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-188",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintran-88801f72c2-appsubnet",
            "network_security_group_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2",
            "subnet_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintran-88801f72c2-appsubnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-190",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintran-88801f72c2-dbsubnet",
            "network_security_group_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-dbsubnet-nsg-eastus2",
            "subnet_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintran-88801f72c2-dbsubnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "res-192",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintranetstoragepesubnet",
            "network_security_group_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintranetstoragepesubnet-nsg-eastus2",
            "subnet_id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintranetstoragepesubnet"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "res-184",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "c1eac291-d076-4833-940d-3184de6b71b0",
            "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet",
            "location": "eastus2",
            "name": "archintran-f0f2d998eb-vnet",
            "resource_group_name": "arch-wordpress-poc",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintran-88801f72c2-appsubnet",
                "name": "archintran-88801f72c2-appsubnet",
                "security_group": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-appsubnet-nsg-eastus2"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintran-88801f72c2-dbsubnet",
                "name": "archintran-88801f72c2-dbsubnet",
                "security_group": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintran-88801f72c2-dbsubnet-nsg-eastus2"
              },
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/Archwordpressgwsubnet",
                "name": "Archwordpressgwsubnet",
                "security_group": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-Archwordpressgwsubnet-nsg-eastus2"
              },
              {
                "address_prefix": "10.0.3.0/24",
                "id": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/virtualNetworks/archintran-f0f2d998eb-vnet/subnets/archintranetstoragepesubnet",
                "name": "archintranetstoragepesubnet",
                "security_group": "/subscriptions/c3df6b60-25b3-4b7c-a9a5-ccf154f68963/resourceGroups/arch-wordpress-poc/providers/Microsoft.Network/networkSecurityGroups/archintran-f0f2d998eb-vnet-archintranetstoragepesubnet-nsg-eastus2"
              }
            ],
            "tags": {
              "AppProfile": "Wordpress",
              "ENV": "POC",
              "Entity": "Arch"
            }
          }
        }
      ]
    }
  ]
}